// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValueCard > renders default as expected 1`] = `
<div>
  <div
    class="value-card w-full flex flex-col gap-6 py-6"
  >
    <div
      class="value-card__icon-wrapper size-[50px] flex items-center justify-center"
    >
      <img
        alt="Test Title"
        class="value-card__icon"
        src="/icons/test-icon.svg"
      />
    </div>
    <h3
      class="value-card__title min-h-[60px]"
    >
      Test Title
    </h3>
    <p
      class="value-card__description "
    >
      Test description
    </p>
  </div>
</div>
`;

exports[`ValueCard > renders with all props correctly 1`] = `
<div>
  <div
    class="value-card w-full flex flex-col gap-6 py-6"
  >
    <div
      class="value-card__icon-wrapper size-[50px] flex items-center justify-center"
    >
      <img
        alt="Custom Title"
        class="value-card__icon"
        src="/icons/custom-icon.svg"
      />
    </div>
    <h3
      class="value-card__title min-h-[60px]"
    >
      Custom Title
    </h3>
    <p
      class="value-card__description "
    >
      Custom description text that is longer
    </p>
  </div>
</div>
`;
